# chidori

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DEPENDENCIES.md  DESIGN.md  LICENSE  README.md  TODO.md  deny.toml  devenv.nix  devenv.yaml  docker-compose.yml  hk.pkl  litellm_config.yaml  llm.txt  mise.toml  publish.sh  pyproject.toml  run-tests.sh  rust-toolchain.toml
crates/chidori/: Cargo.toml
crates/chidori-js/: Cargo.toml
crates/chidori-js/benches/: execution.rs  memory.rs
crates/chidori-js/benchmarks/: README.md  perf-history.data.json  perf-history.html  run.mjs
crates/chidori-js/examples/: agent_replay.rs  deterministic_identity.rs  dom_session.rs  dump_ops.rs  durable_step.rs  edit_and_resume.rs  exactly_once.rs  exploration_media.rs  human_approval.rs  jit_stats.rs  opstats.rs  react_agent_demo.rs  react_branch_converge.rs  realm_profile.rs  restore_latency.rs  retry_flaky_tool.rs  run.rs  shapebench.rs
crates/chidori-js/scripts/: gen_unicode_tables.py
crates/chidori-js/src/: bytecode.rs  compiler.rs  convert.rs  dom.rs  exec.rs  fuse.rs  fxhash.rs  gc.rs  generator.rs  host.rs  iter.rs  jit.rs  journal.rs  jsx.rs  kernel.rs  lib.rs  localize.rs  module.rs  names.rs  opstats.rs  promise.rs  proxy.rs  realm.rs  reg.rs  regexp.rs  replay.rs  shape.rs  trace.rs  typed_array.rs  unicode_tables.rs  value.rs  vm.rs  wtf8.rs
crates/chidori-js/tests/: async_gen.rs  dom_host_integration.rs  dom_prototype.rs  dom_serious.rs  errors.rs  fusion.rs  gc.rs  ic.rs  jit.rs  kernels.rs  limits.rs  localize.rs  module_cycles.rs  obj_tpl.rs  react_ssr.rs  reg.rs  regexp_budget.rs  replay.rs  shapes.rs  smoke.rs
crates/chidori-quickjs/: Cargo.toml
crates/chidori-quickjs-sys/: Cargo.toml  build.rs
crates/chidori-quickjs-sys/quickjs/: README.md  chidori_snapshot.h  chidori_snapshot_stub.c  cutils.c  cutils.h  libbf.c  libregexp.c  libregexp.h  libunicode.c  quickjs-opcode.h  quickjs.c  quickjs.h
crates/chidori-quickjs-sys/src/: lib.rs
crates/chidori-quickjs/src/: lib.rs
crates/chidori-wasm/: Cargo.toml  README.md
crates/chidori-wasm/src/: lib.rs  transpile.rs
crates/chidori-wasm/www/: index.html
crates/chidori/benches/: runtime.rs
crates/chidori/src/: acp.rs  deploy.rs  export.rs  init.rs  lib.rs  main.rs  mem_guard.rs  policy.rs  recipes.rs  scheduler.rs  server.rs  storage.rs
crates/chidori/tests/: cli_typescript.rs  isolate_limits.rs  pkg_install.rs
crates/test262-runner/: Cargo.toml  test262-expectations.json
crates/test262-runner/src/: main.rs
examples/rust/top-ai-launches-hn/: Cargo.toml
sandbox-js/: Cargo.toml
sandbox-js/src/: main.rs
sandbox-python/: Cargo.toml
sandbox-python/src/: main.rs
sandbox-runtime/: Cargo.toml
sandbox-runtime/src/: lib.rs
sdk/python/: README.md  pyproject.toml
sdk/python/app_agent/: __init__.py  client.py
sdk/python/app_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/python/chidori/: __init__.py  client.py
sdk/python/tests/: test_client_http.py  test_session_api.py
toolchain/: Cargo.toml  README.md  book.toml
toolchain/.run/: Test execution__database__tests__test_traverse_single_node.run.xml
toolchain/book_src/: ARCHITECTURE.md  CODE_GENERATION.md  COMMON_ERRORS.md  DEV_ENVIRONMENT.md  FUTURE_WORK.md  RUNNING_EXAMPLES.md  SUMMARY.md
toolchain/chidori/: .npmignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  package-lock.json  package.json  pyproject.toml
toolchain/chidori-core/: .env  Cargo.toml  README.md  build.rs  chidori-core  package.json  pyproject.toml
toolchain/chidori-core/examples/: simple.rs
toolchain/chidori-core/package_node/: index.d.ts  index.js
toolchain/chidori-core/src/: bin.rs  lib.rs  main.rs
toolchain/chidori-core/tests/: e2e.rs
toolchain/chidori-debugger/: Cargo.toml  README_VIM_MOTIONS.md  build.rs
toolchain/chidori-debugger/src/: application.rs  chat.rs  chidori.rs  code.rs  editor.rs  graph.rs  graph_range_collector.rs  json_editor.rs  logs.rs  main.rs  shader_trace.rs  text_editing.rs  tokio_tasks.rs  traces.rs  tree_grouping.rs  util.rs  vim_text_edit.rs
toolchain/chidori-executor-deno/: Cargo.toml
toolchain/chidori-executor-deno/src/: main.rs  runtime_deno.rs
toolchain/chidori-im-hashmap/: Cargo.toml
toolchain/chidori-im-rs/: Cargo.toml  README.md  build.rs
toolchain/chidori-optimizer-dsp/: Cargo.toml
toolchain/chidori-prompt-format/: Cargo.toml  jest.config.ts  package.json
toolchain/chidori-prompt-format/src/: lib.rs
toolchain/chidori-prompt-format/tests/: web.rs
toolchain/chidori-server/: Cargo.toml
toolchain/chidori-static-analysis/: .gitignore  Cargo.toml  LICENSE_MIT  README.md  jest.config.ts
toolchain/chidori-static-analysis/src/: lib.rs  main.rs
toolchain/chidori-static-analysis/tests/: web.rs
toolchain/chidori-tsne/: Cargo.toml
toolchain/chidori-tsne/src/: main.rs
toolchain/chidori-ui/: README.md  bun.lockb  components.json  package.json  svelte.config.js  vite.config.ts
toolchain/chidori-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
toolchain/chidori/package_node/: index.js
toolchain/chidori/package_python/: chidori.pyi  test_chidori.py
toolchain/chidori/src/: lib.rs
toolchain/examples/nodejs/: package.json
toolchain/examples/python/: top-ai-launches-hn.py
toolchain/examples/top-ai-launches-hn/: Cargo.toml
toolchain/prompt-graph-core/: .env  CHANGELOG.md  Cargo.toml  README.md  build.rs
toolchain/prompt-graph-exec/: CHANGELOG.md  Cargo.toml  package.json
toolchain/prompt-graph-std/: Cargo.toml
toolchain/prompt-graph-ui/: Cargo.toml  components.json  index.html  package-lock.json  package.json  prettier.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
toolchain/scripts/: build_local_release_python_packages.sh  build_nodejs_packages.sh  build_python_packages.sh  build_python_packages_local.sh  create_cargo_changelog.sh  get_target_version.py  install_quickwit_graphana_data_source_plugin.sh  rebuild_protobufs.sh  release_nodejs_packages.sh  release_python_packages.sh  test_nodejs_packages.sh  test_python_packages.sh  update_version_numbers.sh
(+1152 files in other folders)
