[workspace]
members = [
    "crates/chidori",
    "crates/chidori-js",
    "crates/test262-runner",
]
resolver = "2"

# Shared metadata for the published crates. Inherited with `field.workspace =
# true`; paths (like `readme`) resolve relative to this workspace root.
[workspace.package]
readme = "README.md"
repository = "https://github.com/ThousandBirdsInc/chidori"
license = "Apache-2.0"

# Optimized release build. LTO + a single codegen unit give the interpreter a
# meaningful speedup at the cost of longer compile times. The `bench` profile
# inherits from `release`, so criterion micro-benchmarks pick this up too.
[profile.release]
lto = true
codegen-units = 1
