[workspace]
members = [
    "crates/chidori",
    "crates/chidori-js",
    "crates/test262-runner",
]
resolver = "2"

# Shared metadata for the published crates. Inherited with `field.workspace =
# true`; paths (like `readme`) resolve relative to this workspace root.
[workspace.package]
readme = "README.md"
repository = "https://github.com/ThousandBirdsInc/chidori"
license = "Apache-2.0"

# Optimized release build. LTO + a single codegen unit give the interpreter a
# meaningful speedup at the cost of longer compile times. The `bench` profile
# inherits from `release`, so criterion micro-benchmarks pick this up too.
[profile.release]
lto = true
codegen-units = 1

# Release + line-table debug info, for profilers (perf/samply/callgrind).
# With fat LTO and one codegen unit the inlining is aggressive; without line
# tables a profiler attributes an inlined callee's cost to whatever function
# absorbed it, which skews the shares optimization decisions are based on.
# Line tables add no runtime cost — they only grow the binary on disk.
# Build with: cargo build --profile profiling ...
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
