[workspace]
members = [
    "crates/chidori",
    "crates/chidori-js",
    "crates/test262-runner",
]
resolver = "2"

# Workspace-wide lint levels, inherited by every crate via `[lints]
# workspace = true`. CI and the pre-commit hook run
# `cargo clippy --workspace --all-targets -- -D warnings`, so anything not
# allowed here must be fixed (or suppressed narrowly with
# `#[expect(..., reason = "...")]`). This table is the only place for blanket
# allows — see docs/rust-style-guide.md.
[workspace.lints.clippy]
# The interpreter and runtime traffic in genuinely wide types (nested
# generics over handles, callbacks, and journal entries); factoring every one
# into a named alias hurts more than it helps. Reviewed case-by-case instead.
type_complexity = "allow"
# A few VM/runtime entry points thread many distinct parameters by design;
# collapsing them into structs is a refactor to take deliberately, not to
# satisfy a lint.
too_many_arguments = "allow"

# Shared metadata for the published crates. Inherited with `field.workspace =
# true`; paths (like `readme`) resolve relative to this workspace root.
[workspace.package]
readme = "README.md"
repository = "https://github.com/ThousandBirdsInc/chidori"
license = "Apache-2.0"

# Optimized release build. LTO + a single codegen unit give the interpreter a
# meaningful speedup at the cost of longer compile times. The `bench` profile
# inherits from `release`, so criterion micro-benchmarks pick this up too.
[profile.release]
lto = true
codegen-units = 1

# Release + line-table debug info, for profilers (perf/samply/callgrind).
# With fat LTO and one codegen unit the inlining is aggressive; without line
# tables a profiler attributes an inlined callee's cost to whatever function
# absorbed it, which skews the shares optimization decisions are based on.
# Line tables add no runtime cost — they only grow the binary on disk.
# Build with: cargo build --profile profiling ...
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
