[project]
name = "chidori"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "litellm[proxy]>=1.37.17",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chidori"]
