[workspace]
members = [
    "chidori-core",
    "chidori-prompt-format",
    "chidori-im-rs",
    "chidori-static-analysis",
    "chidori-ui/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
authors = ["Colton Pierson <colton@thousandbirds.ai>"]
edition = "2021"
license = "MIT"
homepage = "https://docs.thousandbirds.ai"
repository = "https://github.com/ThousandBirdsInc/chidori"

[profile.release]
lto = true
# Tell `rustc` to optimize for small code size.
#opt-level = "s"

[workspace.dependencies]
rkyv = {version = "0.7.42", features = ["validation"]}

gluesql = "0.15.0"
protobuf = "3.2.0"
sqlparser = "0.34.0"
anyhow = { version = "1.0", default-features = false }
indoc = "1.0.3"
serde = { version = "=1.0.197", features = ["derive"] }
serde_derive = "=1.0.197"
serde_json = "=1.0.115"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1", features = ["full", "tracing"] }
env_logger = "0.10.0"
log = "0.4.16"
futures = "0.3.15"
bytes = "1.0.1"
reqwest = { version = "0.11.20", features = ["json", "stream"]}
futures-core = "0.3"
tokio-stream = "0.1"
ulid = "1.0.0"
dashmap = "5.4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-log = "0.1.3"
tracing-chrome = "0.7.1"
tracing-flame = "0.2.0"
bincode = "2.0.0-rc.3"

petgraph = "0.6.3"

