[workspace]
members = [
    "chidori-core",
    "chidori-prompt-format",
    "chidori-static-analysis",
    "chidori-debugger",
]
resolver = "2"

[workspace.package]
version = "0.2.11"
authors = ["Colton Pierson <colton@thousandbirds.ai>"]
edition = "2021"
license = "MIT"
homepage = "https://docs.thousandbirds.ai"
repository = "https://github.com/ThousandBirdsInc/chidori"

#[profile.release]
#lto = false
# Tell `rustc` to optimize for small code size.
#opt-level = "s"

[workspace.dependencies]
rkyv = {version = "0.7.42", features = ["validation"]}
protobuf = "3.2.0"
anyhow = { version = "1.0", default-features = false }
indoc = "1.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "=1.0.128"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1", features = ["full", "tracing"] }
env_logger = "0.10.0"
log = "0.4.16"
futures = "0.3.15"
bytes = "1.0.1"
reqwest = { version = "0.12.8", features = ["json", "stream"]}
futures-core = "0.3"
tokio-stream = "0.1"
ulid = "1.0.0"
dashmap = "5.4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-log = "0.1.3"
tracing-chrome = "0.7.1"
tracing-flame = "0.2.0"
bincode = "2.0.0-rc.3"
petgraph = "0.6.3"
insta = { version = "1.38.0", features = ["yaml", "redactions"] }
thiserror = "1.0.58"
rusqlite = { version = "0.32.1", features = ["bundled"] }

[workspace.dependencies.uuid]
version = "=1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "v7",                # Lets you generate timestamp UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
