[package]
name = "chidori-js"
version = "0.3.0"
edition = "2021"
# oxc 0.133 relies on `if let` guards, stabilized in Rust 1.95.
rust-version = "1.95"
license = "Apache-2.0"
description = "Pure-Rust JavaScript engine with deterministic-replay durable execution. No C, no boa_engine."
repository = "https://github.com/ThousandBirdsInc/chidori"

[lib]
name = "chidori_js"
path = "src/lib.rs"

[features]
# Phase-0 dynamic opcode-frequency instrumentation. OFF by default: when off,
# the `opstats` module and its single `record(..)` call site in the interpreter
# loop are `#[cfg]`-removed, so the shipping engine is byte-identical and pays
# nothing. Enable for analysis only: `cargo run --example opstats --features
# op-histogram`. See docs/interpreter-optimization.md (Phase 0).
op-histogram = []

[dependencies]
# Front end only: we consume the oxc AST and write no lexer/parser of our own.
oxc = { version = "0.133", features = ["semantic", "transformer", "codegen"] }
# Deterministic, insertion-ordered property maps. Object/Map/Set iteration order
# must be address-independent for replay to be correct (see determinism contract).
indexmap = "2"
# Journal serialization + the host-effect value boundary (serde_json::Value) that
# matches the existing SnapshotCapableJsEngine seam.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Arbitrary-precision integers backing the JS BigInt primitive.
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
unicode-normalization = "0.1.25"
# Intl: locale identifier parsing/canonicalization (`icu_locale_core`, already in
# the tree via oxc) plus the CLDR-data-backed canonicalizer/expander (`icu_locale`,
# `compiled_data`) that powers `Intl.getCanonicalLocales` and `Intl.Locale`.
icu_locale_core = "2"
icu_locale = "2"
# Intl.PluralRules: plural-category rules + decimal operand model
# (`ryu` enables building an operand decimal from an f64).
icu_plurals = "2"
fixed_decimal = { version = "0.7", features = ["ryu"] }

[dev-dependencies]
criterion = "0.5"

# Micro-benchmarks for the JS-execution hot paths (compile, interpreter loop,
# property access, calls, arrays, strings). Run with `cargo bench -p chidori-js`.
[[bench]]
name = "execution"
harness = false
