[package]
name = "chidori-js"
version = "0.3.2"
edition = "2021"
# oxc 0.133 relies on `if let` guards, stabilized in Rust 1.95.
rust-version = "1.95"
license = "Apache-2.0"
description = "Pure-Rust JavaScript engine with deterministic-replay durable execution. No C, no boa_engine."
repository = "https://github.com/ThousandBirdsInc/chidori"

[lib]
name = "chidori_js"
path = "src/lib.rs"

[features]
# Phase-0 dynamic opcode-frequency instrumentation. OFF by default: when off,
# the `opstats` module and its single `record(..)` call site in the interpreter
# loop are `#[cfg]`-removed, so the shipping engine is byte-identical and pays
# nothing. Enable for analysis only: `cargo run --example opstats --features
# op-histogram`. See docs/interpreter-optimization.md (Phase 0).
op-histogram = []
# Opt-in mimalloc global allocator for the `run` example binary — an
# allocator EXPERIMENT knob, not a recommendation. OFF by default, twice
# over: (a) it's a C library (vendored and built by libmimalloc-sys), and the
# crate otherwise builds no C; (b) it measured net-negative here (2026-07).
# Callgrind showed glibc malloc at ~23% of instructions on json_roundtrip/
# string_build and mimalloc cut total instructions 10-13% there — but
# interleaved wall-clock across the whole workload suite ran ~9% slower
# geomean (glibc's tcache beats it on the interpreter's LIFO same-size
# churn, and the instruction-count proxy misses that). Kept so the
# experiment is one flag away on other hardware/allocator versions. Library
# consumers are unaffected either way: a global allocator only takes effect
# in a final binary, and this one is only installed in `examples/run.rs`.
mimalloc = ["dep:mimalloc"]

[dependencies]
# Front end only: we consume the oxc AST and write no lexer/parser of our own.
oxc = { version = "0.133", features = ["semantic", "transformer", "codegen"] }
# Deterministic, insertion-ordered property maps. Object/Map/Set iteration order
# must be address-independent for replay to be correct (see determinism contract).
indexmap = "2"
# Journal serialization + the host-effect value boundary (serde_json::Value) that
# matches the existing SnapshotCapableJsEngine seam.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Arbitrary-precision integers backing the JS BigInt primitive.
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
unicode-normalization = "0.1.25"
# Intl: locale identifier parsing/canonicalization (`icu_locale_core`, already in
# the tree via oxc) plus the CLDR-data-backed canonicalizer/expander (`icu_locale`,
# `compiled_data`) that powers `Intl.getCanonicalLocales` and `Intl.Locale`.
icu_locale_core = "2"
icu_locale = "2"
# Intl.PluralRules: plural-category rules + decimal operand model
# (`ryu` enables building an operand decimal from an f64).
icu_plurals = "2"
fixed_decimal = { version = "0.7", features = ["ryu"] }
# Intl.NumberFormat: locale-aware decimal formatting (grouping, digits).
icu_decimal = "2"
# Temporal: the TC39 Temporal proposal implemented in Rust (calendars, time
# zones, durations, and the spec arithmetic).
temporal_rs = "0.2.3"
# Optional, off by default (see the `mimalloc` feature above): faster global
# allocator for the benchmark/`run` binary.
mimalloc = { version = "0.1", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.5"

# Micro-benchmarks for the JS-execution hot paths (compile, interpreter loop,
# property access, calls, arrays, strings). Run with `cargo bench -p chidori-js`.
[[bench]]
name = "execution"
harness = false

# Heap-utilization benchmarks over the same workloads: realm footprint,
# bytecode footprint, per-run peak/churn/retained, and a repeat-run leak
# check. Run with `cargo bench -p chidori-js --bench memory`.
[[bench]]
name = "memory"
harness = false
