[package]
name = "test262-runner"
version = "0.1.0"
edition = "2021"
publish = false
# oxc 0.133 relies on `if let` guards, stabilized in Rust 1.95.
rust-version = "1.95"
description = "Run the official Test262 ECMAScript conformance suite against chidori's pure-Rust JS engine, the same suite Bun and Node measure language conformance with."

[[bin]]
name = "test262-runner"
path = "src/main.rs"

[dependencies]
# The pure-Rust engine under test. No chidori host object is installed, so we
# measure pure language conformance — apples-to-apples with how Bun/Node report
# Test262 numbers.
chidori-js = { path = "../chidori-js" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Workspace-wide lint levels (see [workspace.lints] in the root Cargo.toml).
[lints]
workspace = true
