[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "app-agent"
version = "0.1.0"
description = "Python SDK for the app-agent framework — HTTP client for running and replaying Starlark agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "app-agent contributors" }]
keywords = ["ai", "agents", "starlark", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Pure stdlib — intentionally no runtime dependencies.
dependencies = []

[project.urls]
Homepage = "https://github.com/anthropics/app-agent-framework"

[tool.setuptools.packages.find]
include = ["app_agent*"]
